# Cold-Mail-Automator

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  yc-founders-sorted.json
app/: README.md  app.py  progress.db  requirements.txt
outputs/: yc-founders.csv  yc-founders.json
src/yc_scraper/: __init__.py  cli.py  client.py  config.py  exporters.py  models.py  parser.py
tests/: test_parser.py
